<resources>
    <string name="app_name">Login</string>
    <string name="sign_up">Đăng ký</string>
    <string name="course_list">KHÓA HỌC</string>
    <string name="course_1">OOP - Lập trình hướng đối tượng</string>
    <string name="course_2">DSA - Cấu trúc dữ liệu và giải thuật</string>
    <string name="course_3">SQL - Cơ sở dữ liệu</string>
    <string name="course_4">DOTNET - Công nghệ.net</string>
    <string name="course_detail">Mô tả cụ thể về khóa học :</string>
    <string name="register">Đăng Ký</string>
    <string name="price">500k</string>
    <string name="slots">120 Slot</string>
    <string name="payment">THANH TOÁN</string>
    <string name="name">Họ và tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="your_order">ĐƠN HÀNG CỦA BẠN</string>
    <string name="total_amount">Tổng số tiền</string>
    <string name="payment_method">Hình thức thanh toán</string>
    <string name="cash_on_delivery">Thanh toán tiền mặt</string>
    <string name="online_payment">Thanh toán trực tuyến</string>
    <string name="pay_now">THANH TOÁN</string>
    <string name="teachername1">Giảng viên: Nguyễn Văn A</string>
    <string name="classhours1">Tiết: 1–5</string>
    <string name="classtime1">Giờ học: 7:30 – 11:30</string>
    <string name="classday1">Lịch học: Thứ 2, 4, 6 hằng tuần</string>
    <string name="id_course1">ID Môn học: IT001</string>
    <string name="id_teacher1">ID Giảng viên: GV01</string>
    <string name="id_course2">ID Môn học: IT002</string>
    <string name="id_teacher2">ID Giảng viên: GV02</string>
    <string name="teachername2">Nguyễn Văn B</string>
    <string name="id_course3">ID Môn học: IT003</string>
    <string name="id_teacher3">ID Giảng viên: GV03</string>
    <string name="teachername3">Nguyễn Văn C</string>
    <string name="id_course4">ID Môn học: IT004</string>
    <string name="teachername4">Nguyễn Văn D</string>
    <string name="id_teacher4">ID Giảng viên: GV04</string>
    <string name="btndetail">Xem Chi Tiết Khóa Học</string>
    <string name="title">KHÓA HỌC</string>
    <string name="detail1">Mô tả khóa học 1</string>
    <string name="course1">Khóa học 1</string>
    <string name="detailback">← MÔ TẢ CHI TIẾT KHÓA HỌC</string>
    <string name="pay">THANH TOÁN</string>
    <string name="fullname">Họ và tên*</string>
    <string name="phonenumber">Số điện thoại*</string>
    <string name="Email">Email*</string>
    <string name="yourbill">ĐƠN HÀNG CỦA BẠN</string>
    <string name="course">Khóa học</string>
    <string name="total">Tổng số tiền</string>
    <string name="paymentmethod">Hình thức thanh toán</string>
    <string name="submit_for_pay">THANH TOÁN</string>
    <string name="backtocourselist">Quay lại</string>

    <string-array name="course_status">
        <item>Mở</item>
        <item>Đóng</item>
        <item>Đang diễn ra</item>
    </string-array>

</resources>
