<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCourseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"/>
    <TextView
        android:id="@+id/tvCourseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course1"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_open_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_detail" />


    <TextView
        android:id="@+id/tvCourseDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail1"
        android:textSize="14sp"
        android:layout_marginTop="4dp"/>
        /><!-- Mô tả cho khóa học -->
</LinearLayout>
